style.css
@import url('https://fonts.googleapis.com/css?family=Exo:400,700');

*{
	margin: 0px;
	padding: 0px;
}

html {
	height: 100%;
	overflow: hidden;
}


body{
	font-family: 'Exo', sans-serif;
}


.area{
	background: #4e54c8;
	background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
	width: 100%;
	height:100vh;


}

.circles{
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	overflow: hidden;
}

.circles li{
	position: absolute;
	display: block;
	list-style: none;
	width: 20px;
	height: 20px;
	background: rgba(255, 255, 255, 0.2);
	animation: animate 25s linear infinite;
	bottom: -150px;

}

.circles li:nth-child(1){
	left: 25%;
	width: 80px;
	height: 80px;
	animation-delay: 0s;
}


.circles li:nth-child(2){
	left: 10%;
	width: 20px;
	height: 20px;
	animation-delay: 2s;
	animation-duration: 12s;
}

.circles li:nth-child(3){
	left: 70%;
	width: 20px;
	height: 20px;
	animation-delay: 4s;
}

.circles li:nth-child(4){
	left: 40%;
	width: 60px;
	height: 60px;
	animation-delay: 0s;
	animation-duration: 18s;
}

.circles li:nth-child(5){
	left: 65%;
	width: 20px;
	height: 20px;
	animation-delay: 0s;
}

.circles li:nth-child(6){
	left: 75%;
	width: 110px;
	height: 110px;
	animation-delay: 3s;
}

.circles li:nth-child(7){
	left: 35%;
	width: 150px;
	height: 150px;
	animation-delay: 7s;
}

.circles li:nth-child(8){
	left: 50%;
	width: 25px;
	height: 25px;
	animation-delay: 15s;
	animation-duration: 45s;
}

.circles li:nth-child(9){
	left: 20%;
	width: 15px;
	height: 15px;
	animation-delay: 2s;
	animation-duration: 35s;
}

.circles li:nth-child(10){
	left: 85%;
	width: 150px;
	height: 150px;
	animation-delay: 0s;
	animation-duration: 11s;
}

.circles li > span{
	position: absolute;
	font-weight: bold;
	text-align: center;
	color: #fff;
	text-shadow: 2px 2px black;
	font-size: 50px;
	width: 100%;
	top: 25%;
}

.circles li:nth-child(1) > span {
	font-size: 40px;

}

.circles li:nth-child(2) > span, .circles li:nth-child(3) > span, .circles li:nth-child(5) > span {
	font-size: 16px;
	top: 0;
}

.circles li:nth-child(4) > span {
	font-size: 40px;
	top:0;
}

.circles li:nth-child(6) > span {

}

.circles li:nth-child(7) > span, .circles li:nth-child(10) > span{

}

.circles li:nth-child(8) > span {
	font-size: 15px;
	top: 0;
}

.circles li:nth-child(9) > span {
	font-size: 15px;
	top: 0;
}

@keyframes animate {

	0%{
		transform: translateY(0) rotate(0deg);
		opacity: 1;
		border-radius: 0;
	}

	100%{
		transform: translateY(-1000px) rotate(720deg);
		opacity: 0;
		border-radius: 50%;
	}

}

#container{
	position: absolute;
	top: 10vh;
	background: transparent;
	height: 100vh;
	width: 100vw
}

h1,h2{
	text-align: center;
	margin: 20px 0 0 0;
}

h1{
	color: #e84677;
	text-shadow: 1px 2px 4px black;
}

#intro-text, #level-text{
	color: #fff;
	text-shadow: 5px 4px 16px black;
	font-size: 50px;
	letter-spacing: 2px;
	text-transform: uppercase;
}

#cards-container {
	display: flex;
	justify-content: center;
	flex-flow: wrap;
	align-items: center;
	height: 50vh;
	margin: 0;
	position: absolute;
	top: 25vh;
	width: 100vw;
}

#points-container{ text-align: center; }
.card {
	font-family: sans-serif;
	position: relative;
	width: 105px;
	height: 150px;
	border-radius: 5px;
	border: 1px solid #ccc;
	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
	margin: 0 25px;
	border-radius: 4px;
	background: #fff;
	box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
	transition: .5s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
	cursor: pointer;
	transform-style: preserve-3d;
	transform-origin: center right;
}

.card:hover{
	transform: scale(1.25);
	box-shadow: 0 10px 20px rgba(0,0,0,.12), 0 4px 8px rgba(0,0,0,.06);
}

.card.is-flipped {
	transform: translateX(-100%) rotateY(-180deg);
}

.card__face {
	position: absolute;
	width: 100%;
	height: 100%;
	line-height: 160px;
	color: white;
	text-align: center;
	font-weight: bold;
	font-size: 25px;
	backface-visibility: hidden;
}

.card__face--front {
	background: red;
	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
	background-size: 400% 400%;
	animation: gradient 15s ease infinite;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.card__face--back {
	background: blue;
	transform: rotateY(180deg);
}



.card-value-suit {
	display: inline-block;
	position: absolute;
}
.card-value-suit.top {
	top: 5px;
	left: 5px;
}
.card-value-suit.bot {
	transform: rotate(180deg);
	bottom: 5px;
	right: 5px;
}
.card-suit {
	font-size: 50px;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	left: calc( (107px/2) - 50%);
	width: 100%;
	text-align: center;
}

#points-container{
	margin: 30px;
}
.bold{
	font-weight: bold;
}

.mode-label{
	font-weight: bold;
	text-transform: uppercase;
	color: #ffffff;
	text-decoration: underline;
}
.label{
	color: #ffffff;
	font-weight: bold;
	font-size: 20px;
}


button {
	margin: 20px;
}
.custom-btn {
	width: 200px;
	height: 80px;
	color: #fff;
	border-radius: 5px;
	padding: 10px 25px;
	font-family: 'Lato', sans-serif;
	font-weight: bold;
	text-transform: uppercase;
	background: transparent;
	cursor: pointer;
	transition: all 0.3s ease;
	position: relative;
	display: inline-block;
	box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
	7px 7px 20px 0px rgba(0,0,0,.1),
	4px 4px 5px 0px rgba(0,0,0,.1);
	outline: none;
}

.d-none{
	display: none;
}

#start-game{
	position: absolute;
	top: 40%;
	left: calc(50% - 100px);
	z-index: 99;
}

/* 9 */
.btn-9 {
	border: none;
	transition: all 0.3s ease;
	overflow: hidden;
}
.btn-9:after {
	position: absolute;
	content: " ";
	z-index: -1;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-color: #1fd1f9;
	background-image: linear-gradient(315deg, #1fd1f9 0%, #b621fe 74%);
	transition: all 0.3s ease;
}
.btn-9:hover {
	background: transparent;
	box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
	-4px -4px 6px 0 rgba(116, 125, 136, .2),
	inset -4px -4px 6px 0 rgba(255,255,255,.5),
	inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
	color: #fff;
}
.btn-9:hover:after {
	-webkit-transform: scale(2) rotate(180deg);
	transform: scale(2) rotate(180deg);
	box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
	-4px -4px 6px 0 rgba(116, 125, 136, .2),
	inset -4px -4px 6px 0 rgba(255,255,255,.5),
	inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
}

#play-pause-container{
	position: absolute;
	bottom: 80px;
	left: 80px;
}

#play{
  display: none;
}

#play:checked~.icon{
  width:16px;
  height:48px;
  border-left: 16px solid #ffffff;
  border-right: 16px solid #ffffff;
  border-top: 0px solid transparent;
  border-bottom: 0px solid transparent;
}

.icon{
  position: absolute;
  margin: auto;
  left:0;right:0;
  bottom:0;top:0;
  width:0;
  height:0;
  border-top: 24px solid transparent;
  border-bottom: 24px solid transparent;
  border-left: 48px solid #ffffff;
  transition: all .3s ease;
}


@media screen and (max-width:767px) {

	#intro-text, #level-text{
		text-shadow: 3px 1px 8px black;
		font-size: 30px;
		text-transform: uppercase;
	}

	#level-text{
		font-size: 20px;
		background-color: #e43e7f;
	}

	#cards-container {
    top: 40vh;
		overflow: auto;
	}

	.scene.scene--card {
  	margin: 20px 0;
	}

	#play-pause-container{
		position: absolute;
		bottom: 40px;
		left: 40px;
	}

}

